# doc/api.yaml
@@ -668,6 +668,12 @@ paths:
     post:
       operationId: AuthController_login
       parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateUserDto'
       responses:
         '201':
           description: ''
